[gd_scene load_steps=3 format=3 uid="uid://bduxmseudbtyj"]

[ext_resource type="PackedScene" uid="uid://kj3k63j6crf1" path="res://Object/door.tscn" id="1_5hpqs"]
[ext_resource type="Script" uid="uid://ct1ncaetqld51" path="res://Script/Room.gd" id="1_nn86p"]

[node name="Room" type="Node2D"]
script = ExtResource("1_nn86p")

[node name="Anchor" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="DoorUp" parent="." instance=ExtResource("1_5hpqs")]
unique_name_in_owner = true
position = Vector2(558, 46)

[node name="Entry" type="Marker2D" parent="DoorUp"]

[node name="DoorDown" parent="." instance=ExtResource("1_5hpqs")]
unique_name_in_owner = true
position = Vector2(571, 605)

[node name="Entry" type="Marker2D" parent="DoorDown"]

[node name="DoorLeft" parent="." instance=ExtResource("1_5hpqs")]
unique_name_in_owner = true
position = Vector2(56, 356)

[node name="Entry" type="Marker2D" parent="DoorLeft"]

[node name="DoorRight" parent="." instance=ExtResource("1_5hpqs")]
unique_name_in_owner = true
position = Vector2(1101, 327)

[node name="Entry" type="Marker2D" parent="DoorRight"]
